@@ -709,9 +709,9 @@ name|CustomWeight
 implements|implements
 name|Weight
 block|{
-DECL|field|searcher
-name|Searcher
-name|searcher
+DECL|field|similarity
+name|Similarity
+name|similarity
 decl_stmt|;
 DECL|field|subQueryWeight
 name|Weight
@@ -738,9 +738,12 @@ name|IOException
 block|{
 name|this
 operator|.
-name|searcher
+name|similarity
 operator|=
+name|getSimilarity
+argument_list|(
 name|searcher
+argument_list|)
 expr_stmt|;
 name|this
 operator|.
@@ -964,10 +967,7 @@ return|return
 operator|new
 name|CustomScorer
 argument_list|(
-name|getSimilarity
-argument_list|(
-name|searcher
-argument_list|)
+name|similarity
 argument_list|,
 name|reader
 argument_list|,
