@@ -74,15 +74,6 @@ specifier|private
 name|String
 name|field
 decl_stmt|;
-DECL|field|cache
-specifier|private
-name|FieldCache
-name|cache
-init|=
-name|FieldCache
-operator|.
-name|DEFAULT
-decl_stmt|;
 comment|/**    * Create a cached field source for the input field.      */
 DECL|method|FieldCacheSource
 specifier|public
@@ -115,7 +106,9 @@ block|{
 return|return
 name|getCachedFieldValues
 argument_list|(
-name|cache
+name|FieldCache
+operator|.
+name|DEFAULT
 argument_list|,
 name|field
 argument_list|,
@@ -189,14 +182,6 @@ decl_stmt|;
 return|return
 name|this
 operator|.
-name|cache
-operator|==
-name|other
-operator|.
-name|cache
-operator|&&
-name|this
-operator|.
 name|field
 operator|.
 name|equals
@@ -221,11 +206,6 @@ name|hashCode
 parameter_list|()
 block|{
 return|return
-name|cache
-operator|.
-name|hashCode
-argument_list|()
-operator|+
 name|field
 operator|.
 name|hashCode
