@@ -28,7 +28,47 @@ name|java
 operator|.
 name|io
 operator|.
+name|ByteArrayInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|ByteArrayOutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|ObjectInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|ObjectOutputStream
 import|;
 end_import
 
@@ -350,6 +390,13 @@ argument_list|,
 name|s
 argument_list|)
 expr_stmt|;
+name|checkSerialization
+argument_list|(
+name|q1
+argument_list|,
+name|s
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 catch|catch
@@ -364,6 +411,126 @@ name|RuntimeException
 argument_list|(
 name|e
 argument_list|)
+throw|;
+block|}
+block|}
+comment|/** check that the query weight is serializable.     * @throws IOException if serialization check fail.     */
+DECL|method|checkSerialization
+specifier|private
+specifier|static
+name|void
+name|checkSerialization
+parameter_list|(
+name|Query
+name|q
+parameter_list|,
+name|Searcher
+name|s
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|Weight
+name|w
+init|=
+name|q
+operator|.
+name|weight
+argument_list|(
+name|s
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|ByteArrayOutputStream
+name|bos
+init|=
+operator|new
+name|ByteArrayOutputStream
+argument_list|()
+decl_stmt|;
+name|ObjectOutputStream
+name|oos
+init|=
+operator|new
+name|ObjectOutputStream
+argument_list|(
+name|bos
+argument_list|)
+decl_stmt|;
+name|oos
+operator|.
+name|writeObject
+argument_list|(
+name|w
+argument_list|)
+expr_stmt|;
+name|oos
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|ObjectInputStream
+name|ois
+init|=
+operator|new
+name|ObjectInputStream
+argument_list|(
+operator|new
+name|ByteArrayInputStream
+argument_list|(
+name|bos
+operator|.
+name|toByteArray
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Weight
+name|w2
+init|=
+operator|(
+name|Weight
+operator|)
+name|ois
+operator|.
+name|readObject
+argument_list|()
+decl_stmt|;
+name|ois
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|//skip rquals() test for now - most weights don't overide equals() and we won't add this just for the tests.
+comment|//TestCase.assertEquals("writeObject(w) != w.  ("+w+")",w2,w);
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|IOException
+name|e2
+init|=
+operator|new
+name|IOException
+argument_list|(
+literal|"Serialization failed for "
+operator|+
+name|w
+argument_list|)
+decl_stmt|;
+name|e2
+operator|.
+name|initCause
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+throw|throw
+name|e2
 throw|;
 block|}
 block|}
