@@ -48,162 +48,6 @@ name|*
 import|;
 end_import
 
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
-name|RAMDirectory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexWriter
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexReader
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|Term
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|analysis
-operator|.
-name|WhitespaceAnalyzer
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|document
-operator|.
-name|Document
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|document
-operator|.
-name|Field
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|queryParser
-operator|.
-name|QueryParser
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|queryParser
-operator|.
-name|ParseException
-import|;
-end_import
-
-begin_import
-import|import
-name|junit
-operator|.
-name|framework
-operator|.
-name|TestCase
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Random
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|BitSet
-import|;
-end_import
-
 begin_comment
 comment|/**  * TestExplanations subclass that builds up super crazy complex queries  * on the assumption that if the explanations work out right for them,  * they should work for anything.  */
 end_comment
@@ -234,6 +78,20 @@ name|searcher
 operator|.
 name|setSimilarity
 argument_list|(
+name|createQnorm1Similarity
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|// must be static for weight serialization tests
+DECL|method|createQnorm1Similarity
+specifier|private
+specifier|static
+name|DefaultSimilarity
+name|createQnorm1Similarity
+parameter_list|()
+block|{
+return|return
 operator|new
 name|DefaultSimilarity
 argument_list|()
@@ -252,8 +110,7 @@ return|;
 comment|// / (float) Math.sqrt(1.0f + sumOfSquaredWeights);
 block|}
 block|}
-argument_list|)
-expr_stmt|;
+return|;
 block|}
 DECL|method|test1
 specifier|public
