@@ -18,16 +18,6 @@ end_comment
 
 begin_import
 import|import
-name|junit
-operator|.
-name|framework
-operator|.
-name|TestCase
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -142,6 +132,20 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|LuceneTestCase
+import|;
+end_import
+
+begin_import
+import|import
 name|java
 operator|.
 name|util
@@ -160,7 +164,7 @@ specifier|public
 class|class
 name|TestFilteredQuery
 extends|extends
-name|TestCase
+name|LuceneTestCase
 block|{
 DECL|field|searcher
 specifier|private
@@ -498,6 +502,19 @@ argument_list|)
 expr_stmt|;
 name|filter
 operator|=
+name|newStaticFilterB
+argument_list|()
+expr_stmt|;
+block|}
+comment|// must be static for serialization tests
+DECL|method|newStaticFilterB
+specifier|private
+specifier|static
+name|Filter
+name|newStaticFilterB
+parameter_list|()
+block|{
+return|return
 operator|new
 name|Filter
 argument_list|()
@@ -538,7 +555,7 @@ name|bitset
 return|;
 block|}
 block|}
-expr_stmt|;
+return|;
 block|}
 DECL|method|tearDown
 specifier|public
@@ -816,41 +833,8 @@ comment|// test boost
 name|Filter
 name|f
 init|=
-operator|new
-name|Filter
+name|newStaticFilterA
 argument_list|()
-block|{
-specifier|public
-name|BitSet
-name|bits
-parameter_list|(
-name|IndexReader
-name|reader
-parameter_list|)
-block|{
-name|BitSet
-name|bitset
-init|=
-operator|new
-name|BitSet
-argument_list|(
-literal|5
-argument_list|)
-decl_stmt|;
-name|bitset
-operator|.
-name|set
-argument_list|(
-literal|0
-argument_list|,
-literal|5
-argument_list|)
-expr_stmt|;
-return|return
-name|bitset
-return|;
-block|}
-block|}
 decl_stmt|;
 name|float
 name|boost
@@ -1020,6 +1004,52 @@ literal|0
 argument_list|)
 expr_stmt|;
 comment|// the boost value of the underlying query shouldn't have changed
+block|}
+comment|// must be static for serialization tests
+DECL|method|newStaticFilterA
+specifier|private
+specifier|static
+name|Filter
+name|newStaticFilterA
+parameter_list|()
+block|{
+return|return
+operator|new
+name|Filter
+argument_list|()
+block|{
+specifier|public
+name|BitSet
+name|bits
+parameter_list|(
+name|IndexReader
+name|reader
+parameter_list|)
+block|{
+name|BitSet
+name|bitset
+init|=
+operator|new
+name|BitSet
+argument_list|(
+literal|5
+argument_list|)
+decl_stmt|;
+name|bitset
+operator|.
+name|set
+argument_list|(
+literal|0
+argument_list|,
+literal|5
+argument_list|)
+expr_stmt|;
+return|return
+name|bitset
+return|;
+block|}
+block|}
+return|;
 block|}
 comment|/**    * Tests whether the scores of the two queries are the same.    */
 DECL|method|assertScoreEquals
